--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Brandon Hubbard</title>
-</head>
+---
+layout: default
+title: BrandonHubbard.com
+---
 
-<body>
-    <h1>Brandon Hubbard | Github</h1>
-</body>
-</html>
+Welcome to my site!
