--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@ tagline: "a Los Angeles based web developer"
 <p>I am a web developer for <a href="http://imforza.com/">imFORZA</a>, a small startup based out of beautiful <a href="http://en.wikipedia.org/wiki/El_Segundo,_California">El Segundo, CA</a>. When I am not coding or commuting on the <strong>405</strong> listening to <a href="http://twit.tv/">TWIT</a>, I love to travel to far places or snowboard the local slopes. I also enjoy long walks with my dog Dash. This site is built with Jekyll and hosted on <a href="http://github.com">GitHub</a>.</p>
 <p>&nbsp;</p>
 
-<ul class="entries">
-  {% for post in site.posts %}
-  <li>
-    <a href="{{ post.url }}">
-      <h3>{{ post.title }}</h3>
-    </a>
-  </li>
-  {% endfor %}
+
+
+<ul class="posts">
+	{% for post in site.posts %}
+	<li>
+		<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+		{% if post.description %}
+		<p>{{ post.description }}</p>
+		{% endif %}
+		<p class="post_date">{{ post.date | date: "%B %e, %Y" }}</p>
+	</li>
+	{% endfor %}
 </ul>
