--- a/sitemap.html
+++ b/sitemap.html
@@ -1,16 +1,22 @@
 ---
-layout: page
+layout: homepage
 title: "Sitemap"
 ---
 
-<ul class="posts">
-	{% for post in site.posts %}
-	<li>
-		<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-		{% if post.description %}
-		<p>{{ post.description }}</p>
-		{% endif %}
-		<p class="post_date">{{ post.date | date: "%B %e, %Y" }}</p>
-	</li>
-	{% endfor %}
-</ul>
+{% for post in site.posts %}
+<div class="row-fluid">
+
+	<div class="span2 pull-left">
+		<p class="aside">{{ post.date | date: "%Y" }}</p>
+	</div>
+	
+	<div class="span4">
+		<h2 style="font-size:14px;"><a href="{{ post.url }}">{{ post.title }}</a></h2>
+	</div>
+	
+	<div class="span2 pull-right">
+		<p class="aside">{{ post.date | date: "%b %e" }}</p>
+	</div>
+	
+</div>
+{% endfor %}
