--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@ tagline: "a Los Angeles based web developer"
 <p>&nbsp;</p>
 
 
+<div class="latest-posts">
+<h4 class="page-header">My Latest Writing</h4>
 <ul class="posts">
-	{% for post in site.categories.blog %}
-	<li>
-		<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-		<p class="post_date">{{ post.date | date: "%B %e, %Y" }}</p>
-	</li>
+	{% for post in site.categories.blog limit:3 %}
+	
+	<div class="row">
+	<div class="span5">
+	<h3 class="hp-preview"><a href="{{ post.url }}">{{ post.title }}</a></h3>
+	</div>
+	
+	
+	<div class="span3">
+	<p class="post_date pull-right">{{ post.date | date: "%B %e, %Y" }}</p>
+	</div>
+	
+	</div>
+	
 	{% endfor %}
 </ul>
+</div>
