--- a/feed/index.html
+++ b/feed/index.html
@@ -14,7 +14,7 @@ layout: nil
 		<email>support@brandonhubbard.com</email>
 	</author>
 
-	{% for post in site.posts limit: 10 %}
+	{% for post in site.categories.blog limit: 10 %}
 	<entry>
 		<id>{{ site.url }}{{ post.id }}</id>
 		<link type="text/html" rel="alternate" href="{{ site.url }}{{ post.url }}"/>
