--- a/index.html
+++ b/index.html
@@ -28,3 +28,26 @@ tagline: "a Los Angeles based web developer"
 	{% endfor %}
 </ul>
 </div>
+
+<br /><br />
+
+<div class="latest-posts">
+<h4 class="page-header">My Latest Project</h4>
+<ul class="posts">
+	{% for post in site.categories.projects limit:1 %}
+	
+	<div class="row">
+	<div class="span5">
+	<h3 class="hp-preview"><a href="{{ post.url }}">{{ post.title }}</a></h3>
+	</div>
+	
+	
+	<div class="span3">
+	<p class="post_date pull-right">{{ post.date | date: "%B %e, %Y" }}</p>
+	</div>
+	
+	</div>
+	
+	{% endfor %}
+</ul>
+</div>
