--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@ tagline: "a Los Angeles based web developer"
 	
 	{% endfor %}
 </ul>
+
 </div>
 
 <br /><br />
 
 <div class="latest-posts">
-<h4 class="page-header">My Latest Project</h4>
+<h4 class="page-header">My Latest Project</h4> 
 <ul class="posts">
-	{% for post in site.categories.projects limit:1 %}
+	{% for post in site.categories.projects limit:3 %}
 	
 	<div class="row">
 	<div class="span5">
@@ -43,7 +44,7 @@ tagline: "a Los Angeles based web developer"
 	
 	
 	<div class="span3">
-	<p class="post_date pull-right">{{ post.date | date: "%B %e, %Y" }}</p>
+	<p class="post_date pull-right">{{ post.status }}</p>
 	</div>
 	
 	</div>
