--- a/resume/index.html
+++ b/resume/index.html
@@ -11,7 +11,7 @@
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet" type="text/css" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css' />
-    <link rel="stylesheet" href="/assets/css/screen.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/screen.css" type="text/css" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome-ie7.min.css" rel="stylesheet" type="text/css" />
 </head>
 
