--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "Home"
 tagline: "a Los Angeles based web developer"
 ---
 
-<p>I am a web developer for <a href="http://imforza.com/" target="_blank">imFORZA</a>, a small startup based out of beautiful <a href="http://en.wikipedia.org/wiki/El_Segundo,_California" target="_blank">El Segundo, CA</a>. When I am not coding or commuting on the <strong>405</strong> listening to <a href="http://twit.tv/">TWIT</a>, I love to travel to far places or snowboard the local slopes. I also enjoy long walks with my dog Dash. This site was hand-coded in Coda, built with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> and hosted on <a href="http://github.com" target="_blank">GitHub</a>.</p>
+<p>I am a web developer for <a href="http://imforza.com/" target="_blank">imFORZA</a>, a small startup based out of beautiful <a href="http://en.wikipedia.org/wiki/El_Segundo,_California" target="_blank">El Segundo, CA</a>. When I am not coding or commuting on the <strong>405</strong> listening to <a href="http://twit.tv/">TWIT</a>, I love to travel to far places or snowboard the local slopes. I also enjoy long walks with my dog Dash. This site was hand-coded in Coda, built with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> and hosted on <a href="http://github.com" target="_blank">GitHub</a>. Oh be sure to check out my <a href="/offers/">Latest Deals</a>.</p>
 <p>&nbsp;</p>
 
 
